WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234613
Re-enable CustomDisplayName and DefaultDisplayName API tests on Monterey
https://bugs.webkit.org/show_bug.cgi?id=234613
Summary
Re-enable CustomDisplayName and DefaultDisplayName API tests on Monterey
Alex Christensen
Reported
2021-12-22 11:29:48 PST
Re-enable CustomDisplayName and DefaultDisplayName API tests on Monterey
Attachments
Patch
(13.92 KB, patch)
2021-12-22 11:31 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(12.60 KB, patch)
2021-12-22 13:57 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(13.32 KB, patch)
2021-12-22 15:00 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(12.93 KB, patch)
2022-01-24 13:44 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-12-22 11:31:00 PST
Created
attachment 447822
[details]
Patch
Alex Christensen
Comment 2
2021-12-22 11:34:06 PST
rdar://80353834
Alex Christensen
Comment 3
2021-12-22 13:57:19 PST
Created
attachment 447831
[details]
Patch
Alex Christensen
Comment 4
2021-12-22 15:00:28 PST
Created
attachment 447836
[details]
Patch
Alex Christensen
Comment 5
2021-12-22 15:13:44 PST
Comment on
attachment 447836
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447836&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:521 > + bool sendToNetworkProcess = isInProcessInitialization == IsInProcessInitialization::No
needs semicolon
Alex Christensen
Comment 6
2021-12-22 15:16:22 PST
r287374
Ryan Haddad
Comment 7
2022-01-04 16:19:34 PST
Reverted
r287374
for reason: Caused assertion failures on Monterey Committed
r287595
(
245723@trunk
): <
https://commits.webkit.org/245723@trunk
>
Radar WebKit Bug Importer
Comment 8
2022-01-04 16:20:23 PST
<
rdar://problem/87120910
>
Ryan Haddad
Comment 9
2022-01-04 16:23:21 PST
rdar://80353834
Alex Christensen
Comment 10
2022-01-19 22:16:08 PST
It looks like this test can only be run on pre-Monterey macOS or internal macOS with the necessary entitlement. Otherwise we would need to start the network process to keep the right state, but we can't start the network process yet without breaking other things.
Alex Christensen
Comment 11
2022-01-24 13:44:02 PST
Created
attachment 449850
[details]
Patch
EWS
Comment 12
2022-01-24 22:10:43 PST
Committed
r288540
(
246372@main
): <
https://commits.webkit.org/246372@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449850
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug