Re-enable CustomDisplayName and DefaultDisplayName API tests on Monterey https://bugs.webkit.org/show_bug.cgi?id=234613

Reviewed by Brady Eidson.

Source/WebKit:

When we introduced setting the display name from the network process,
we didn't update the tests to get the information from the process that can access it.

* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* NetworkProcess/mac/NetworkConnectionToWebProcessMac.mm:
(WebKit::NetworkConnectionToWebProcess::updateActivePages):
(WebKit::NetworkConnectionToWebProcess::getProcessDisplayName):
* WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::getProcessDisplayName):
* WebProcess/WebProcess.h:
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::auditTokenForSelf):
(WebKit::WebProcess::updateProcessName):
(WebKit::WebProcess::getProcessDisplayName):
(WebKit::WebProcess::updateActivePages):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/DisplayName.mm:
(TestWebKitAPI::TEST):




Canonical link: https://commits.webkit.org/245514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287374 268f45cc-cd09-0410-ab3c-d52691b4dbfc